<resources>
    <string name="app_name">food app</string>
    <string name="slogan">This is the best home food delivery app in India. Eat Healthy, Stay Healthy.</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Sign In</string>
    <string name="or_text">Create Account</string>
    <string name="create_text">Create Account</string>
    <string name="username">Username</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="fullName">Full Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="facebook_app_id">2015384365272711</string>
    <string name="fb_login_protocol_scheme">fb2015384365272711</string>


    <string name="home_second">Home Second</string>
    <string name="or">Or</string>
    <string name="app_id">2015384365272711</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="send_sms">send sms</string>
</resources>
