<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pic1"
    android:padding="16dp"
    tools:context=".DeliverySignUpActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHighlight="#CDC7C7"
            android:textColorHint="#69FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColorHint="#69FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/phoneNumber"
            android:inputType="text|phone"
            android:maxLines="1"
            android:textColorHint="#69FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColorHint="#69FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="#69FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/email_createAcc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="#FFFFFF"
            android:text="@string/create_text"
            android:textColor="#EFE3E3"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>