<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UserSignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/fullName"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHighlight="#C7FFFFFF"
            android:textColorHint="#C7FFFFFF" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#C7FFFFFF" />

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/phoneNumber"
            android:inputType="text|phone"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#C7FFFFFF" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#C7FFFFFF" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="#C7FFFFFF" />


        <RadioGroup
            android:id="@+id/CustomerTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/RegularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:buttonTint="#FFFFFF"
                android:text="Regular"
                android:textColor="#C7FFFFFF"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/IrregularButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:buttonTint="#FFFFFF"
                android:text="Irregular"
                android:textColor="#C7FFFFFF"
                android:textSize="15sp" />


        </RadioGroup>

        <Button
            android:id="@+id/email_createAcc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round"
            android:text="@string/create_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>