<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/pic1"
    android:padding="16dp"
    tools:context=".DeliverSignInActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/email_id"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textColorHighlight="#CDC7C7"
            android:textColorHint="#69FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:textColorHighlight="#CDC7C7"
            android:textColorHint="#69FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif"
            android:text="@string/login_text"
            android:textColor="#CABEBE"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:text="@string/or"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffff"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:text="@string/or"
            android:textStyle="bold"
            android:textColor="#ffff"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/email_createAcc_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/bg_round"
            android:backgroundTint="#FFFFFF"
            android:fontFamily="sans-serif"
            android:text="@string/create_text"
            android:textColor="#CABEBE"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>